--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,121 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS, уровень 2</a>».</p>
-
-  </body>
+<html class="page" lang="ru">
+<head>
+  <meta charset="utf-8">
+  <title>Функционально питание для котов "Кэт энерджи"</title>
+</head>
+<body class="page__body">
+  <header class="page-header">
+    <a class="page-header__logo-img">
+      <img src="https://via.placeholder.com/33x38" width="33" height="38" alt="">
+    </a>
+    <a class="page-header__logo-text">
+      <img src="https://via.placeholder.com/101x18" width="101" height="18" alt="">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toogle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <ul class="main-nav__list">
+        <li class="main-nav__item">
+          <a>Главная</a>
+        </li>
+        <li>
+          <a href="catalog.html">Каталог продукции</a>
+        </li>
+        <li>
+          <a href="form.html">Подбор программы</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main class="page-main">
+    <header class="main-header">
+      <h1 class="main-header__title">Функциональное питание для котов</h1>
+      <p class="main-header__slogan">Занялся собой? Займись котом!</p>
+      <img class="main-header__image" src="https://via.placeholder.com/280x270" width="280" height="270" alt="">
+      <a class="button main-header__button" href="form.html">Подобрать программу</a>
+    </header>
+    <section class="programs">
+      <h2 class="visually-hidden">Программы питания</h2>
+      <ul class="programs__list">
+        <li class="programs__item program">
+          <h3 class="program__title program__title_theme_slim">Похудение</h3>
+          <p class="program__slogan">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
+            диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a class="program__link" href="">Каталог Slim</a>
+        </li>
+        <li class="programs__item program">
+          <h3 class="program__title program__title_theme_weight">Набор массы</h3>
+          <p class="program__slogan">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
+            поможет вашему коту нарастить необходимые мышцы!</p>
+          <a class="program__link" href="">Каталог Pro</a>
+        </li>
+      </ul>
+    </section>
+    <section class="features">
+      <h2 class="features__title">Как это работает</h2>
+      <ul class="features__list">
+        <li class="features__item features__item_theme_healthy">Функциональное питание содержит только полезные
+          питательные вещества.</li>
+        <li class="features__item features__item_theme_powdery">Выпускается в виде порошка, который нужно лишь залить
+          кипятком и готово.</li>
+        <li class="features__item features__item_theme_food">Замените один-два приема обычной еды на наше
+          функциональное питание.</li>
+        <li class="features__item features__item_theme_thime">Уже через месяц наслаждайтесь изменениями к лучшему вашего
+          питомца!</li>
+      </ul>
+    </section>
+    <section class="example">
+      <h2 class="example__title">Живой пример</h2>
+      <p class="example__desc">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+        Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
+        в день.
+      </p>
+      <dl class="example__list">
+        <div class="example__item result">
+          <dt class="result__number">5 кг</dt>
+          <dd class="result__desc">снижение веса</dd>
+        </div>
+        <div class="effect__item result">
+          <dt class="result__number">60 дней</dt>
+          <dd class="result__desc">затрачено времени</dd>
+        </div>
+      </dl>
+      <p class="example__сosts">Затраты на питание: 15 000 руб.</p>
+      <div class="example__slider slider">
+        <ul class="slider__list">
+          <li><img src="https://via.placeholder.com/251x240" width="251" height="240" alt=""></li>
+          <li><img src="https://via.placeholder.com/251x240" width="251" height="240"></li>
+        </ul>
+        <div class="slider__control">
+          Было
+          <button class="slider__toggle" type="button"></button>
+          Стало
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="page-footer">
+    <div class="pafe-footer__contacts contacts">
+      <p class="contacts__title">Приглашаем к сотрудничеству дилеров!</p>
+      <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+    </div>
+    <img class="page-footer__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="">
+    <a class="page-footer__logo">
+      <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="">
+    </a>
+    <div class="page-footer__social social">
+      <ul class="social__list">
+        <li class="social__item"><a class="social__link social__link_type_vk" href="https://vk.com/htmlacademy">Мы в
+            Вконтакте</a></li>
+        <li class="social__item"><a class="social__link social__link_type_fb"
+            href="https://www.facebook.com/htmlacademy">Мы в Фейсбуке</a></li>
+        <li class="social__item"><a class="social__link social__link_type_inst"
+            href="https://www.instagram.com/htmlacademy">Мы в Инстаграме</a></li>
+      </ul>
+    </div>
+    <div class="page-footer__copyright copyright">
+      <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">Html Academy</a>
+    </div>
+  </footer>
+</body>
 </html>
