Убрал табы на главной странице

--- a/source/index.html
+++ b/source/index.html
@@ -160,8 +160,8 @@
       <p class="contacts__title">Приглашаем к сотрудничеству дилеров!</p>
       <p class="contacts__text">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
     </div>
-    <img class="footer__map" src="https://via.placeholder.com/320x362" width="320" height="362" alt="Офис компании по адресу ул.
-			Большая Конюшенная 19/8, Санкт-Петербург">
+    <img class="footer__map" src="https://via.placeholder.com/320x362" width="320" height="362"
+      alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
     <a class="footer__logo">
       <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип Cat Energy">
     </a>
