Внес правки в стилизацию главной страницы

--- a/source/index.html
+++ b/source/index.html
@@ -17,7 +17,7 @@
             Открыть меню
           </span>
         </button>
-        <ul class="main-nav__list">
+        <ul class="main-nav__list list">
           <li class="main-nav__item main-nav__item--current">
             <a class="main-nav__link">
               Главная
@@ -43,7 +43,7 @@
     </h1>
     <section class="main__promo promo">
       <div class="container">
-        <h2 class="promo__title">
+        <h2 class="promo__title title title--large">
           Функциональное питание для котов
         </h2>
         <p class="promo__slogan">
@@ -51,7 +51,7 @@
         </p>
         <img class="promo__image" src="https://via.placeholder.com/280x270" width="280" height="270"
           alt="Бумажный стакан Cat Energy Pro массой 500 грамм со вкусом курицы">
-        <a class="promo__button button" href="form.html">
+        <a class="promo__button button button--primary" href="form.html">
           Подобрать программу
         </a>
       </div>
@@ -61,9 +61,9 @@
         <h2 class="visually-hidden">
           Программы питания
         </h2>
-        <ul class="programs__list">
+        <ul class="programs__list list">
           <li class="programs__item program">
-            <h3 class="program__title program__title--theme-slim">
+            <h3 class="program__title program__title--theme-slim title title--medium">
               Похудение
             </h3>
             <p class="program__slogan">
@@ -75,7 +75,7 @@
             </a>
           </li>
           <li class="programs__item program">
-            <h3 class="program__title program__title--theme-weight">
+            <h3 class="program__title program__title--theme-weight title title--medium">
               Набор массы
             </h3>
             <p class="program__slogan">
@@ -91,10 +91,10 @@
     </section>
     <section class="main__features features">
       <div class="container">
-        <h2 class="features__title">
+        <h2 class="features__title title title--x-large">
           Как это работает
         </h2>
-        <ol class="features__list">
+        <ol class="features__list list">
           <li class="features__item features__item--theme-healthy">
             Функциональное питание содержит только полезные питательные вещества.
           </li>
@@ -112,14 +112,14 @@
     </section>
     <section class="example">
       <div class="container">
-        <h2 class="example__title">
+        <h2 class="example__title title title--x-large">
           Живой пример
         </h2>
         <p class="example__desc">
           Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
           изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
         </p>
-        <dl class="example__list">
+        <dl class="example__list list">
           <div class="example__item result">
             <dt class="result__term">
               5 кг
@@ -141,7 +141,7 @@
           Затраты на питание: 15 000 руб.
         </p>
         <div class="example__slider slider">
-          <ul class="slider__list">
+          <ul class="slider__list list">
             <li class="slider__item">
               <img src="https://via.placeholder.com/251x240" width="251" height="240"
                 alt="Крупный кот Борис до использования питания Cat Energy Slim">
@@ -152,13 +152,13 @@
             </li>
           </ul>
           <div class="slider__control">
-            <button class="slider__button" type="button">
+            <button class="slider__button button" type="button">
               Было
             </button>
             <div class="slider__range">
               <button class="slider__toggle" type="button" aria-label="Переключить слайды"></button>
             </div>
-            <button class="slider__button" type="button">
+            <button class="slider__button button" type="button">
               Стало
             </button>
           </div>
@@ -181,7 +181,7 @@
       <a class="footer__logo">
         <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип Cat Energy">
       </a>
-      <ul class="footer__social social">
+      <ul class="footer__social list">
         <li class="social__item">
           <a class="social__link social__link--vk" href="https://vk.com/htmlacademy">
             <span class="visually-hidden">
