Правки в стилизацию формы

--- a/source/form.html
+++ b/source/form.html
@@ -110,7 +110,7 @@
             Комментарий
           </legend>
           <label>
-            <textarea class="form__input" name="comment" placeholder="Расскажите обо всех повадках кота"
+            <textarea class="form__input form__textarea" name="comment" placeholder="Расскажите обо всех повадках кота"
               aria-label="Ваш комментарий"></textarea>
           </label>
         </fieldset>
@@ -169,20 +169,26 @@
       <a href="index.html" class="footer__logo">
         <img src="https://via.placeholder.com/128x24" width="128" height="24" alt="Логотип Cat Energy">
       </a>
-      <ul class="footer__social social">
+      <ul class="footer__social social list">
         <li class="social__item">
           <a class="social__link social__link--vk" href="https://vk.com/htmlacademy">
-            Мы в Вконтакте
+            <span class="visually-hidden">
+              Мы в Вконтакте
+            </span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--fb" href="https://www.facebook.com/htmlacademy">
-            Мы в Фейсбуке
+            <span class="visually-hidden">
+              Мы в Фейсбуке
+            </span>
           </a>
         </li>
         <li class="social__item">
           <a class="social__link social__link--inst" href="https://www.instagram.com/htmlacademy">
-            Мы в Инстаграме
+            <span class="visually-hidden">
+              Мы в Инстаграме
+            </span>
           </a>
         </li>
       </ul>
