Адаптивная сетка для главной страницы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -334,7 +334,7 @@
             <p class="all-product__text">
               На самом деле вкусов гораздо больше!
             </p>
-            <a class="all-product__button button button--theme-smoke" href="blank.html">
+            <a class="all-product__button button button--secondary" href="blank.html">
               Заказать
             </a>
           </li>
