--- a/source/index.html
+++ b/source/index.html
@@ -2,17 +2,18 @@
 <html class="page" lang="ru">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Функциональное питание для котов "Cat Energy"</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="page__body">
-  <header class="header">
-    <div class="container">
+  <div class="container">
+    <header class="header">
       <a class="header__logo">
         <img src="https://via.placeholder.com/190x38" width="190" height="38" alt="Логотип Cat Energy">
       </a>
       <nav class="main-nav">
-        <button class="main-nav__toggle" type="button">
+        <button class="main-nav__toggle button" type="button">
           <span class="visually-hidden">
             Открыть меню
           </span>
@@ -35,16 +36,16 @@
           </li>
         </ul>
       </nav>
-    </div>
+  </div>
   </header>
   <main class="main">
     <h1 class="visually-hidden">
       Cat Energy
     </h1>
-    <section class="main__promo promo">
-      <div class="container">
+    <div class="container">
+      <section class="main__promo promo">
         <h2 class="promo__title title title--large">
-          Функциональное питание для котов
+          Функциональное<br> питание для котов
         </h2>
         <p class="promo__slogan">
           Занялся собой? Займись котом!
@@ -54,10 +55,8 @@
         <a class="promo__button button button--primary" href="form.html">
           Подобрать программу
         </a>
-      </div>
-    </section>
-    <section class="main__programs programs">
-      <div class="container">
+      </section>
+      <section class="main__programs programs">
         <h2 class="visually-hidden">
           Программы питания
         </h2>
@@ -87,10 +86,8 @@
             </a>
           </li>
         </ul>
-      </div>
-    </section>
-    <section class="main__features features">
-      <div class="container">
+      </section>
+      <section class="main__features features">
         <h2 class="features__title title title--x-large">
           Как это работает
         </h2>
@@ -108,59 +105,67 @@
             Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
           </li>
         </ol>
-      </div>
-    </section>
+      </section>
+    </div>
     <section class="example">
       <div class="container">
         <h2 class="example__title title title--x-large">
           Живой пример
         </h2>
-        <p class="example__desc">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
-          изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
-        </p>
-        <dl class="example__list list">
-          <div class="example__item result">
-            <dt class="result__term">
-              5 кг
-            </dt>
-            <dd class="result__definition">
-              снижение веса
-            </dd>
-          </div>
-          <div class="example__item result">
-            <dt class="result__term">
-              60 дней
-            </dt>
-            <dd class="result__definition">
-              затрачено времени
-            </dd>
-          </div>
-        </dl>
-        <p class="example__сosts">
-          Затраты на питание: 15 000 руб.
-        </p>
-        <div class="example__slider slider">
-          <ul class="slider__list list">
-            <li class="slider__item">
-              <img src="https://via.placeholder.com/251x240" width="251" height="240"
-                alt="Крупный кот Борис до использования питания Cat Energy Slim">
-            </li>
-            <li class="slider__item">
-              <img src="https://via.placeholder.com/251x240" width="251" height="240"
-                alt="Похудевший кот Борис после использования питания Cat Energy Slim">
-            </li>
-          </ul>
-          <div class="slider__control">
-            <button class="slider__button button" type="button">
-              Было
-            </button>
-            <div class="slider__range">
-              <button class="slider__toggle" type="button" aria-label="Переключить слайды"></button>
+        <div class="example__container-desktop">
+          <div class="exampler__container-desc">
+            <p class="example__desc">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
+              изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+            </p>
+            <div class="example__container-tablet">
+              <dl class="example__list list">
+                <div class="example__item result">
+                  <dt class="result__term">
+                    5 кг
+                  </dt>
+                  <dd class="result__definition">
+                    снижение<br> веса
+                  </dd>
+                </div>
+                <div class="example__item result">
+                  <dt class="result__term">
+                    60 дней
+                  </dt>
+                  <dd class="result__definition">
+                    затрачено<br> времени
+                  </dd>
+                </div>
+              </dl>
+              <p class="example__сosts">
+                Затраты на питание: 15 000 руб.
+              </p>
             </div>
-            <button class="slider__button button" type="button">
-              Стало
-            </button>
+          </div>
+          <div class="example__slider slider">
+            <ul class="slider__list list">
+              <li class="slider__item">
+                <img src="https://via.placeholder.com/251x240" width="251" height="240"
+                  alt="Крупный кот Борис до использования питания Cat Energy Slim">
+              </li>
+              <li class="slider__item">
+                <img src="https://via.placeholder.com/251x240" width="251" height="240"
+                  alt="Похудевший кот Борис после использования питания Cat Energy Slim">
+              </li>
+            </ul>
+            <div class="slider__control">
+              <button class="slider__button button" type="button">
+                Было
+              </button>
+              <div class="slider__range">
+                <div class="slider__bar">
+                  <button class="slider__toggle" type="button" aria-label="Переключить слайды"></button>
+                </div>
+              </div>
+              <button class="slider__button button" type="button">
+                Стало
+              </button>
+            </div>
           </div>
         </div>
       </div>
